<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/imagen_login"
    android:padding="24dp">

    <!-- Contenedor de campos y botones (35% superior) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- Correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxStrokeColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Login -->
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <!-- Botón Ir a Registro -->
        <Button
            android:id="@+id/btnGoRegister"
            android:text="@string/go_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <!-- Espacio inferior (65% vacío) -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65" />

</LinearLayout>
